# Paddle

./: .gitignore  CMakeLists.txt  Dockerfile
cmake/: flags.cmake
paddle/: CMakeLists.txt
paddle/capi/: Matrix.cpp  PaddleCAPI.h
paddle/capi/tests/: test_Matrix.cpp
paddle/fluid/platform/: cpu_helper.cc
paddle/framework/: eigen.h  init.cc  operator.h  tensor.h
paddle/majel/: CMakeLists.txt  array.h  cuda_device.cc  cuda_device.h  malloc.cc  reference.h
paddle/majel/test/: CMakeLists.txt  array_test.cu
paddle/operators/: CMakeLists.txt  add_op_functor.h  mul_op_functor.h  op_functor_test.cc  op_functor_test.cu  recurrent_network_op.cc  softmax_op_functor.h  type_alias.h
paddle/operators/functors/: CMakeLists.txt  add_op_functor.h  mul_op_functor.h  op_functor_test.cc  op_functor_test.cu  softmax_op_functor.h
paddle/platform/: CMakeLists.txt  device_context.cc  device_context.h
paddle/platform/dynload/: cublas.h
paddle/scripts/: run_python_tests.sh
python/: CMakeLists.txt  setup.py.in
python/paddle/fluid/: framework.py  layer_helper.py
python/paddle/framework/: create_op_creation_methods.py  default_scope_funcs.py  network.py
python/paddle/framework/tests/: op_test_util.py  test_default_scope_funcs.py  test_fc_op.py  test_net.py  test_network.py  test_op_creation_methods.py  test_protobuf.py  test_recurrent_op.py  test_scope.py  test_tensor.py
python/paddle/v2/fluid/: memory_optimization_transpiler.py
